# ot-ifx-release

./: .gitmodules  CMakeLists.txt  README.md
script/: build  common_utility  flash  make-pretty
src/cyw30739/: CMakeLists.txt  alarm.c  arm-none-eabi.cmake  crypto.c  entropy.c  i15dot4.h  ifx_ot_cli_cmd.c  misc.c  openthread-core-cyw30739-config.h  radio.c  system.c  uart.c
